--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
     // https://mvnrepository.com/artifact/jstl/jstl
     compile group: 'jstl', name: 'jstl', version: '1.2'
+    // https://mvnrepository.com/artifact/com.mchange/c3p0
+    compile group: 'com.mchange', name: 'c3p0', version: '0.9.5.3'
+
 
 
 
