--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,8 @@
          xsi:schemaLocation = "http://java.sun.com/xml/ns/j2ee
    http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-    <display-name>Spring MVC Application</display-name>
-
-    <servlet>
-        <servlet-name>HelloWeb</servlet-name>
+ <servlet>
+        <servlet-name>application</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
@@ -15,7 +13,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>HelloWeb</servlet-name>
+        <servlet-name>application</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
