--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ repositories {
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/aspectj/aspectjrt
+    compile group: 'aspectj', name: 'aspectjrt', version: '1.5.4'
+    // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.6.10'
     // https://mvnrepository.com/artifact/org.springframework/spring-core
     compile group: 'org.springframework', name: 'spring-core', version: '5.1.4.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework/spring-context
