fixed c3po warnings

--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -2,6 +2,7 @@ database.driverClassName=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5432/hotel
 database.username=postgres
 database.password=postgres
+c3p0.initialPoolSize=5
 c3p0.maxPoolSize=20
 c3p0.minPoolSize=5
 c3p0.maxStatements=20
