--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+    // https://mvnrepository.com/artifact/org.springframework/spring-test
+    testCompile group: 'org.springframework', name: 'spring-test', version: '5.1.5.RELEASE'
     compileOnly 'org.projectlombok:lombok:1.18.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
