--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
+server.error.whitelabel.enabled=false
+
 debug=true
+
