--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,20 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.show_sql=true
 
-server.error.whitelabel.enabled=false
+server.error.whitelabel.enabled=true
+server.tomcat.access-log-enabled=true
+
+logging.level.root = ERROR
+logging.level.org.springframework=ERROR
+logging.level.org.springframework.boot.autoconfigure=ERROR
+logging.level.org.springframework.security = WARNING
+logging.level.org.springframework.web = INFO
+logging.level.org.hibernate = INFO
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.apache.commons.dbcp2 = DEBUG
+logging.file = logfile.log
 
 debug=true
 
